Remove RestconfError.ErrorTag
// FIXME: finish conversion
// FIXME: clean up method locations
// FIXME: write a proper commit message

JIRA: NETCONF-793
Change-Id: I21a79625a2509adabf50f706739c88f9a3359777
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>